# libidn

./: .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  FAQ  Makefile.am  NEWS  README.md  THANKS  bootstrap.conf  cfg.mk  configure.ac  maint.mk
contrib/: README
contrib/doxygen/: gdoc2doxygen
contrib/java/: Makefile.am  README
csharp/: AssemblyInfo.cs  IDNA.cs  IDNAException.cs  Makefile.am  NFKC.cs  Punycode.cs  PunycodeException.cs  Stringprep.cs  StringprepException.cs
csharp/generate/: AssemblyInfo.cs  GenerateNFKC.cs  GenerateRFC3454.cs  HashSet.cs  Program.cs  Tokenizer.cs
doc/: Makefile.am  components.dot  fdl-1.3.texi  gdoc  libidn.texi
doc/cyclo/: Makefile.am
doc/java/: Makefile.am
doc/specifications/: Makefile.am
doc/tld/: Makefile.am  README  fr.tld  no.tld
examples/: Makefile.am  README  example.c  example2.c  example3.c  example4.c  example5.c
gl/: Makefile.am
gl/m4/: gnulib-comp.m4
gl/top/: README-release.diff
java/: Makefile.am
java/src/: Makefile.am
java/src/main/java/: Makefile.am
java/src/main/java/gnu/: Makefile.am
java/src/main/java/gnu/inet/: Makefile.am
java/src/main/java/gnu/inet/encoding/: IDNA.java  IDNAException.java  Makefile.am  NFKC.java  Punycode.java  PunycodeException.java  RangeSet.java  Stringprep.java  StringprepException.java
java/src/test/java/: Makefile.am
java/src/test/java/gnu/inet/encoding/: RangeSetTest.java  StringprepTest.java
java/src/test/java/gnu/inet/encoding/caliper/: CaliperStringprep.java
java/src/util/: Makefile.am
java/src/util/java/: GenerateNFKC.java  GenerateRFC3454.java  Makefile.am  TestIDNA.java  TestNFKC.java
lib/: Makefile.am  gen-stringprep-tables.pl  gen-tld-tables.pl  gen-unicode-tables.pl  idn-free.c  idn-free.h  idna.c  idna.h  libidn.map  libidn.pc.in  nfkc.c  pr29.c  pr29.h  profiles.c  punycode.c  punycode.h  strerror-idna.c  strerror-pr29.c  strerror-punycode.c  strerror-stringprep.c  strerror-tld.c  stringprep.c  stringprep.h  tld.c  tld.h  toutf8.c  version.c
lib/gl/: Makefile.am  _Noreturn.h  free.c  stddef.in.h  stdint.in.h  stdlib.in.h  striconv.c  unistd.in.h
lib/gl/m4/: gnulib-comp.m4
lib/gltests/: Makefile.am
libc/: README  example.c  getaddrinfo-idn.txt
po/: POTFILES.in  cs.po.in  da.po.in  de.po.in  es.po.in  fi.po.in  fr.po.in  hr.po.in  hu.po.in  id.po.in  it.po.in  ja.po.in  ka.po.in  ko.po.in  nl.po.in  pl.po.in  pt_BR.po.in  ro.po.in  sr.po.in  uk.po.in  vi.po.in  zh_CN.po.in
src/: Makefile.am  idn.c  idn.ggo  idna.el  punycode.el
tests/: Makefile.am  standalone.sh  tst_badutf8.c  tst_badutf8nfkc.c  tst_idna.c  tst_idna2.c  tst_idna3.c  tst_idna4.c  tst_nfkc.c  tst_pr29.c  tst_punycode.c  tst_strerror.c  tst_stringprep.c  tst_symbols.c  tst_tld.c  tst_toascii64oob.c  tst_toutf8.c  tst_utf8crash.c  tst_versions.c  utils.c  utils.h
windows/: libidn4win.mk
windows/include/: ac-stdint.h  config.h  idn-int.h  stdbool.h
